--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -34,9 +34,11 @@ html, body, #root {
 
 .app-container {
   display: grid;
-  grid-template-columns: 340px 1fr 400px;
+  grid-template-columns: 330px 1fr 390px;
   grid-template-rows: 60px calc(100vh - 60px);
   height: 100vh;
+  gap: 10px;
+  padding: 0 10px 10px 10px;
 }
 
 /* --- HEADER --- */
